Minor fixes - links on pages and nav drop down on smaller screens

--- a/a2/css/battles-stylesheet.css
+++ b/a2/css/battles-stylesheet.css
@@ -207,6 +207,7 @@ footer h3 {
 
   .flexNav {
     flex-flow: column wrap;
+    display:block
   }
 
   nav {
@@ -234,6 +235,7 @@ footer h3 {
 @media all and (max-width: 900px) {
   .flexNav {
     flex-flow: row wrap;
+    display:block
   }
 
   nav {
