--- a/a2/css/contact-stylesheet.css
+++ b/a2/css/contact-stylesheet.css
@@ -199,6 +199,7 @@ footer h3 {
 
   .flexNav {
     flex-flow: column wrap;
+    display:block
   }
 
   nav {
@@ -229,6 +230,7 @@ footer h3 {
 @media all and (max-width: 900px) {
   .flexNav {
     flex-flow: row wrap;
+    display:block
   }
 
   nav {
