--- a/a2/css/introduction-stylesheet.css
+++ b/a2/css/introduction-stylesheet.css
@@ -213,6 +213,7 @@ footer h3 {
 @media all and (max-width: 500px) {
 	.flexNav {
 		flex-flow: column wrap;
+		display:block
 	}
 
 	nav {
@@ -237,6 +238,7 @@ footer h3 {
 @media all and (max-width: 900px) {
 	.flexNav {
 		flex-flow: row wrap;
+		display: block;
 	}
 
 	nav {
