--- a/a2/css/letters-stylesheet.css
+++ b/a2/css/letters-stylesheet.css
@@ -277,6 +277,7 @@ footer h3 {
 @media all and (max-width: 500px) {
   .flexNav {
     flex-flow: column wrap;
+    display: block;
   }
 
   nav {
@@ -289,6 +290,7 @@ footer h3 {
 @media all and (max-width: 900px) {
   .flexNav {
     flex-flow: row wrap;
+    display: block;
   }
 
  .modal-open {
