--- a/a2/style.css
+++ b/a2/style.css
@@ -243,7 +243,7 @@ footer h3 {
 
 	.flexNav {
 		flex-flow: column wrap;
-		display:block
+		display: block;
 	}
 
 	nav {
@@ -282,7 +282,7 @@ footer h3 {
 @media all and (max-width: 900px) {
 	.flexNav {
 		flex-flow: row wrap;
-		display:block
+		display: block;
 	}
 
 	nav {
